# FSS

./: .gitattributes  .gitignore  CITATION.cff  DataCollapse.py  LICENSE  README.md  example.ipynb  pyproject.toml
.github/workflows/: sync-upstream.yml  test.yml  update-citation.yml
FSS/: __init__.py  data_collapse.py
src/fss/: data_collapse.py
tests/: test_data_collapse.py
