[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project]
name = "FSS"
version = "0.0.4"
description = "Finite size scaling analysis for phase transition (under development)"
authors = [{ name = "Haining Pan", email = "hnpan@terpmail.umd.edu" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

dependencies = [
  "numpy>2",
  "lmfit>1",
  "matplotlib>3",
  "pandas>2",
  "tqdm",
  "joblib",
]

[dependency-groups]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/Pixley-Research-Group-in-CMT/FSS.git"
Repository = "https://github.com/Pixley-Research-Group-in-CMT/FSS.git"
